2011-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.preview.php: fixed a typing error.

2011-03-11 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,
	extensions/update_manager/load_updatemanager.php: changes for PostgreSQL.

2011-03-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, operation/agentes/estado_agente.php: erased
	the lost call to traces messages.

2011-03-10 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,
	extensions/update_manager/sql/update_manager.postgreSQL.sql,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/lib/libupdate_manager_components.php,
	extensions/update_manager/lib/libupdate_manager_updates.php: some changes
	for the PostgreSQL.

2011-03-10 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	added function "get_db_type_field_table" and subfunctions for the engines.

	* extensions/pandora_logs.php,
	extenions/update_manager/lib/libupdate_manager_utils.php: fixed source code
	style.

2011-03-10  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager/sql/update_manager.sql
	extensions/update_manager/load_updatemanager.php
	extensions/update_manager/lib/load_updatemanager.php
	extensions/update_manager/lib/xmlrpc
	extensions/update_manager/lib/xmlrpc/xmlrpcs.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc_wrappers.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc.inc
	extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/lib/libupdate_manager.php
	extensions/update_manager/lib/libupdate_manager_utils.php
	extensions/update_manager/lib/libupdate_manager_components.php
	extensions/update_manager/lib/libupdate_manager_updates.php
	extensions/update_manager/settings.php